# cbz-tools-optimizer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  processor.rs  resize.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: app_config.rs  lang.rs  main.rs
docs/: index.html
