[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/gui",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["cbz-tools"]
license = "MIT"
repository = "https://github.com/cbz-tools/cbz-image-optimizer"

# debugビルドでも依存クレートはrelease最適化を適用（画像処理の速度に直結）
[profile.dev.package."*"]
opt-level = 3

# releaseビルドはLTO有効化でさらに高速化
[profile.release]
lto = "thin"

[workspace.dependencies]
# 画像処理
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif", "bmp", "tiff", "gif"] }
# 並列処理
rayon = "1.10"
# ZIP
zip = { version = "2.2", default-features = false, features = ["deflate"] }
# エラー処理
anyhow = "1.0"
thiserror = "1.0"
# シリアライズ（設定保存）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ログ
log = "0.4"
env_logger = "0.11"
