[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/gui",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["cbz-tools"]
license = "MIT"
repository = "https://github.com/cbz-tools/cbz-image-optimizer"

# Apply release optimizations to dependencies even in dev builds (critical for image processing speed)
[profile.dev.package."*"]
opt-level = 3

# Enable LTO for release builds for further speed gains
[profile.release]
lto = "thin"

[workspace.dependencies]
# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif", "bmp", "tiff", "gif"] }
# Parallelism
rayon = "1.10"
# ZIP
zip = { version = "2.2", default-features = false, features = ["deflate"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Serialization (config persistence)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging
log = "0.4"
env_logger = "0.11"
