[package]
name = "cbz-tools-optimizer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cbz-opt"
path = "src/main.rs"

[dependencies]
cbz-tools-optimizer-core = { path = "../core", features = ["clap"] }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Timestamp generation for log files
chrono = "0.4"
