[package]
name = "cbz-image-optimizer-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cbz-opt-gui"
path = "src/main.rs"

[dependencies]
cbz-image-optimizer-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
# GUI framework
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
# Channel bridge between GUI and processing thread
crossbeam-channel = "0.5"
# Config persistence
toml = "0.8"
# File dialog
rfd = "0.15"

image = { version = "0.25", default-features = false, features = ["png"] }
egui_material_icons = "0.1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Windows: hide the console window
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

# Windows: suppress console window in release builds
[target.'cfg(windows)']
[package.metadata.winres]
FileDescription = "CBZ Image Optimizer"
ProductName = "CBZ Image Optimizer"
